--- a/README
+++ b/README
@@ -1,5 +1,23 @@
-This is a template engine for IM developers.
-You could start your IM engine from it.
+About ibus-icelandic:
+    Currently it only supports icelandic character inputting (no error checking, etc).
 
-src - engine in c language
-engine - engine in python language
+Keymap:
+    The kaymap layout is different from layout of the modern icelandic keyboard.
+    But it's pretty simple and straight forward:
+        everykey except <q>, <w>, <z>, <c>: the corresponding characters in English;
+        <w>: ö
+        <z>: ð
+        <c>: æ
+
+    And <q> is used as "modify key"; pressing q (or Q) will toggle on/off Icelandic-specific (compared to English) characters' inputting. For example:
+        <qa> or <Qa>: yields "á";
+        <qE> or <QE>: yields "É";
+
+    Finally, þ and Þ are bound to <qt> and <qT>.
+
+Compile:
+
+    ./autogen.sh
+    ./configure --prefix=/usr
+    make
+    (sudo) make install
